--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,8 +3,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "target": "es2016",
-    "types": ["node", "vitest/globals"]
+    "target": "ES2022",
+    "types": ["node", "vitest/globals"],
+    "composite": true
   },
   "files": ["src/test-setup.ts"],
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
