--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@angular/build": "^20.0.0",
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@types/bootstrap": "^5.2.10",
     "jsdom": "^22.0.0",
+    "postcss-purgecss": "^5.0.0",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vite-tsconfig-paths": "^4.2.0",
