--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,13 @@ yarn-error.log
 testem.log
 /typings
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # System files
 .DS_Store
 Thumbs.db
