mongo driver example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 # MongoDB Configuration
-API_KEY_MONGODB=your_mongodb_api_key_here
-MONGODB_DATA_SOURCE=Cluster0
+MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster0.xxxxx.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DATABASE=staticDb
 
 # Application Environment
