--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "dotenv": "^17.2.0",
+    "mongodb": "^6.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
