--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,12 @@ services:
     name: petruschka-analog
     env: node
     buildCommand: npm ci && npm run build:prod
-    startCommand: npm run start:prod
+    startCommand: node dist/analog/server/index.mjs
+    plan: free
     envVars:
       - key: NODE_VERSION
         value: 20.19.1
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 10000
