--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "mongodb": "^6.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@analogjs/platform": "^1.19.1",
+    "typescript": "~5.8.0",
+    "vite": "^7.0.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^1.19.1",
     "@analogjs/vite-plugin-angular": "^1.19.1",
     "@analogjs/vitest-angular": "^1.19.1",
     "@angular/build": "^20.0.0",
@@ -47,8 +49,6 @@
     "@types/bootstrap": "^5.2.10",
     "jsdom": "^22.0.0",
     "postcss-purgecss": "^5.0.0",
-    "typescript": "~5.8.0",
-    "vite": "^7.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^3.0.0"
   },
