--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-# MongoDB Configuration
+# MongoDB Configuration (Legacy - Data API)
 API_KEY_MONGODB=your_mongodb_api_key_here
 MONGODB_DATA_SOURCE=Cluster0
 MONGODB_DATABASE=staticDb
+
+# MongoDB Configuration (Native Driver)
+MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster.mongodb.net/
 
 # Application Environment
 NODE_ENV=development
