--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # MongoDB Configuration (Native Driver)
-MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster.mongodb.net/your_database_name
+MONGODB_CONNECTION_STRING=todo
 
 # Application Environment
 NODE_ENV=development
