--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "^20.3.3",
     "@angular/platform-server": "^20.3.3",
     "@angular/router": "^20.3.3",
+    "@angular/youtube-player": "^20.2.14",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
